# sdc

./: .gitignore  LICENSE  README.md  pyproject.toml
gantt/: .RData  .Rhistory  data.csv  gantt.r
slidesave/: save.py
