[tool.poetry]
name = "sdc"
version = "0.1.0"
description = ""
authors = ["Sam <tritoke@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
