[tool.poetry]
name = "python"
version = "0.1.0"
description = "A set of scripts I am writing to help with the UKSDC competition and with the world final of the SDC."
authors = ["Sam <tritoke@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
